--- a/new-vector-enhanced.user.css
+++ b/new-vector-enhanced.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 Enhanced
 @namespace   StylishThemes
-@version     1.0.23
+@version     1.0.24
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-enhanced.user.css
 @license     CC-BY-SA-4.0
@@ -18,6 +18,7 @@ domain("outreach.wikimedia.org"),
 domain("wikimania.wikimedia.org"),
 domain("foundation.wikimedia.org"),
 domain("wikitech.wikimedia.org"),
+domain("incubator.wikimedia.org"),
 domain("wiktionary.org"),
 domain("mediawiki.org"),
 domain("wikisource.org"),
@@ -114,8 +115,6 @@ domain("patchdemo.wmflabs.org") {
 }
   
 /* Fix min-width */
-.vector-feature-zebra-design-disabled .mw-page-container, 
-.vector-feature-zebra-design-enabled .mw-page-container,
 .mw-page-container {
   margin: 0;
   min-width: unset;
@@ -151,7 +150,6 @@ domain("patchdemo.wmflabs.org") {
    https://userstyles.world/style/5789/wikipedia-fixed-top-and-sidebars */
 .mw-header {
   position: fixed !important; 
-  background: white; 
   width: 98%;
   top: 0;
   left: 0;
@@ -237,6 +235,10 @@ html {
   }
 }
 
+.vector-menu-tabs .mw-list-item.selected a, .vector-menu-tabs .mw-list-item.selected a:visited {
+  border-bottom: 1px solid;
+}
+
   /* ------------------------------------------------------------------ */
   /* ------------------------------------------------------------------ */
 /* 3. ToC tweaks */
@@ -301,7 +303,7 @@ html {
 
 /* Add ToC-item underlines, for whitespace reduction and alignment indicators  */
 .vector-toc-text {
-border-bottom: 1px #eaecf0 solid !important;
+border-bottom: 1px var(--border-color-muted) solid !important;
 padding-bottom: 2px !important;
 }
 
@@ -374,29 +376,29 @@ padding-bottom: 2px !important;
 
 /* Move the collapsed ToC down */
 #vector-sticky-header-toc {
-  top: 48px !important;
+  top: 49px !important;
   left: 0 !important;
   margin-top: 0;
   margin-left: -131px !important;
   margin-right: 100px !important;
-  background: white;
-  border: #e4e4e4 1px solid;
+  background: var(--color-inverted);
+  border: var(--border-color-base) 1px solid;
 }
 #vector-sticky-header-toc-label,
 #vector-page-titlebar-toc-label {
   padding: 8px 10px !important;
 }
-.vector-feature-zebra-design-disabled.client-js.vector-sticky-header-enabled .vector-sticky-header-visible .vector-sticky-header-container,
-.vector-feature-zebra-design-enabled .vector-sticky-header-container {
+client-js.vector-sticky-header-enabled .vector-sticky-header-visible .vector-sticky-header-container,
+.vector-sticky-header-container {
   transition: unset;
 }
 @media screen and (min-width: 999px) {
   #vector-page-titlebar-toc {
     position: fixed !important;
     top: 54px !important;
-    left: 3px !important;
-    border: 1px solid #eaecf0;
-    background: white !important;
+    left: 4px !important;
+    border: 1px solid var(--color-base);
+    background: var(--color-inverted);
     z-index: 1;
   }
 }
@@ -411,10 +413,10 @@ padding-bottom: 2px !important;
   }
 }
 #vector-page-titlebar-toc-label {
-  background-color: white !important;
+  background-color: var(--color-inverted);
   opacity: 1;
 }
-.vector-feature-zebra-design-disabled .vector-dropdown .vector-dropdown-checkbox {
+.vector-dropdown .vector-dropdown-checkbox {
   left: 0;
 }
 .vector-dropdown > .vector-menu-content {
@@ -430,8 +432,7 @@ padding-bottom: 2px !important;
 }
 
 @media screen and (max-width: 999px) {
-  .vector-feature-zebra-design-disabled.client-js .vector-below-page-title .vector-page-titlebar-toc,
-  .vector-feature-zebra-design-enabled.client-js .vector-below-page-title .vector-page-titlebar-toc {
+  .vector-below-page-title .vector-page-titlebar-toc {
   left: 0;
   }
   .client-js .vector-below-page-title .vector-page-titlebar-toc {
@@ -510,8 +511,7 @@ padding-top: 10px;
 }
   
 /* Remove whitespace at edges */
-.mw-page-container,
-.vector-feature-zebra-design-disabled .mw-page-container  {
+.mw-page-container  {
   padding-left: 5px !important;
 }
 .mw-portlet .mw-portlet-navigation .vector-menu .vector-menu-portal .portal {
@@ -523,8 +523,7 @@ padding-top: 10px;
 
 /* fix page-tools min-width */
 #vector-page-tools-pinned-container,
-.vector-feature-zebra-design-disabled #vector-page-tools-pinned-container .vector-page-tools,
-.vector-feature-zebra-design-enabled #vector-page-tools-pinned-container .vector-page-tools {
+#vector-page-tools-pinned-container .vector-page-tools {
   min-width: 190px;
 }
   
@@ -543,30 +542,26 @@ padding-top: 10px;
 
 /* Reduce the grid gutter, and header height */
 @media screen and ( min-width: 1200px ) {
-  .vector-feature-zebra-design-disabled .mw-page-container-inner,
-  .vector-feature-zebra-design-enabled .mw-page-container-inner {  
-    grid-template: min-content 1fr min-content / 290px !important;
+  .mw-page-container-inner {  
+    grid-template: min-content 1fr min-content / 290px;
     grid-template-areas: 
       'siteNotice siteNotice'
       'columnStart pageContent'
-      'footer footer' !important;
+      'footer footer' ;
     column-gap: 10px !important;
   }
 }
 @media screen and ( max-width: 1199px ) and ( min-width: 1000px ) {
-  .vector-feature-zebra-design-disabled .mw-page-container-inner,
-  .vector-feature-zebra-design-enabled .mw-page-container-inner {  
-    grid-template: min-content 1fr min-content / 250px !important;
+  .mw-page-container-inner {  
+    grid-template: min-content 1fr min-content / 250px ;
     grid-template-areas: 
       'siteNotice siteNotice'
       'columnStart pageContent'
-      'footer footer' !important;
+      'footer footer';
     column-gap: 10px !important;
   }
 }
 @media screen and (min-width: 1000px) {
-  .vector-feature-zebra-design-disabled .mw-body,
-  .vector-feature-zebra-design-enabled .mw-body,
   .mw-body {
     display: grid;
     grid-template: min-content min-content min-content 1fr / minmax(0,60em) min-content;
@@ -579,6 +574,22 @@ padding-top: 10px;
 }
 .vector-feature-page-tools-pinned-enabled .mw-body {
   column-gap: 20px !important;
+}
+
+/* Single column grid when column start is empty (i.e. no pinned ToC or pinned main menu) */
+.vector-feature-main-menu-pinned-disabled.vector-toc-not-available .mw-page-container-inner,
+.vector-feature-main-menu-pinned-disabled.vector-feature-toc-pinned-clientpref-0 .mw-page-container-inner {
+	grid-template-columns: minmax(0, 1fr);
+	/* stylelint-disable-next-line stylistic/declaration-colon-space-after */
+	grid-template-areas:
+		'siteNotice'
+		'pageContent'
+		'columnStart'
+		'footer';
+	/* Horizontally center content when single column */
+	.mw-body {
+		justify-content: center;
+	}
 }
 
 /* Fix sitenotice margin
@@ -796,10 +807,10 @@ html.vector-feature-zebra-design-enabled {
 
 /* Sticky the page-toolbar, and adjust its width (TODO: Fix imperfect width...) */
 .vector-page-toolbar, 
-.vector-feature-zebra-design-disabled .mw-body .vector-page-toolbar  {
+.mw-body .vector-page-toolbar  {
   position: fixed !important; 
   top: 54px; 
-  background-color: white; 
+  /* background-color: white; */
   z-index: 1 !important;
   right: 1px;
   margin-left: -2px
@@ -809,7 +820,7 @@ html.vector-feature-zebra-design-enabled {
     width: calc(100% - 310px);
   }
   .vector-page-toolbar, 
-  .vector-feature-zebra-design-disabled .mw-body .vector-page-toolbar {
+  .mw-body .vector-page-toolbar {
     margin: 0 5px 0 0;
   }
 }
@@ -818,7 +829,7 @@ html.vector-feature-zebra-design-enabled {
     width: calc(100% - 280px);
   }
   .vector-page-toolbar, 
-  .vector-feature-zebra-design-disabled .mw-body .vector-page-toolbar {
+  .mw-body .vector-page-toolbar {
     margin: 0 5px 0 0;
   }
 }
@@ -828,7 +839,7 @@ html.vector-feature-zebra-design-enabled {
     left: 10px;
   }
 }
-.vector-feature-zebra-design-disabled .vector-dropdown .vector-dropdown-content {
+.vector-dropdown .vector-dropdown-content {
   padding: 0 !important;
 }
 .vector-page-toolbar-container .vector-dropdown {
@@ -851,15 +862,12 @@ html {
 }
 
 /* Nudge content down to account for no-default gap */
-.vector-feature-zebra-design-disabled .mw-content-container,
-.vector-feature-zebra-design-enabled .mw-page-container,
 .mw-page-container {
   padding-top: 65px !important;
 }
 @media screen and (max-width: 999px) {
-  .vector-feature-zebra-design-disabled .mw-page-container,
   .mw-content-container {
-    padding-top: 28px;
+    padding-top: 32px;
   }
   #pt-talk-alert {
     margin-top: 10px !important;
@@ -887,7 +895,7 @@ body:not(.skin-contenttranslation) .ve-ui-toolbar-floating > .oo-ui-toolbar-bar 
 .mw-sticky-header > thead {
     position: -webkit-sticky;
     position: sticky;
-    top: 80px !important;
+    top: 78px !important;
 }
 
 /* Fix overlap of personal-tools */
@@ -934,20 +942,19 @@ body:not(.skin-contenttranslation) .ve-ui-toolbar-floating > .oo-ui-toolbar-bar 
   
 /* Grey Sticky Headers  */
 .mw-header {
-  background-color: #f8f9fa !important; /* or a bit darker: #eaecf0 */
-  border-bottom: 1px solid #eaecf0 !important;
+  background-color: var(--color-inverted); /* or a bit darker: #eaecf0 */
+  border-bottom: 1px solid var(--border-color-base);
 }
-.vector-page-toolbar, 
-.vector-feature-zebra-design-disabled .mw-body .vector-page-toolbar {
-  background-color: #f8f9fa !important;
-  border-bottom: 1px solid #a2a9b1 !important;
-  border-left: 1px solid #a2a9b1 !important;
+.vector-page-toolbar {
+  background-color: var(--color-inverted);
+  border-bottom: 1px solid var(--border-color-base);
+  border-left: 1px solid var(--border-color-base);
 /*  border-right: 1px solid #a2a9b1 !important; */
 }
 #p-associated-pages {
-  background-color: #f8f9fa !important;
-  border-bottom: 1px solid #a2a9b1 !important;
-  border-left: 1px solid #a2a9b1 !important;
+  background-color: var(--color-inverted);
+  border-bottom: 1px solid var(--border-color-base);
+  border-left: 1px solid var(--border-color-base);
   padding-bottom: 0;
   max-height: 24px;
 }
@@ -963,7 +970,7 @@ body:not(.skin-contenttranslation) .ve-ui-toolbar-floating > .oo-ui-toolbar-bar 
 /* Tweak Site-logo design */
 .mw-logo-icon {
   display: block;
-  background: white !important;
+  background: white;
   padding: 2px 4px;
   border-left: 1px solid #eaecf0;
   border-right: 1px solid #eaecf0;
@@ -979,7 +986,7 @@ body:not(.skin-contenttranslation) .ve-ui-toolbar-floating > .oo-ui-toolbar-bar 
     margin: 2px;
   }
   #ca-addsection {
-    -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-alerts&image=speechBubbleAdd&format=original) no-repeat 0 0/15px; mask: url(/w/load.php?modules=oojs-ui.styles.icons-alerts&image=speechBubbleAdd&format=original) no-repeat 0 0/15px; background-color: black; padding: 10px; width: 10px; font-size: 1px; color: white; text-decoration: none;
+    -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-alerts&image=speechBubbleAdd&format=original) no-repeat 0 0/15px; mask: url(/w/load.php?modules=oojs-ui.styles.icons-alerts&image=speechBubbleAdd&format=original) no-repeat 0 0/15px; background-color: var(--color-base); padding: 10px; width: 10px; font-size: 1px; color: var(--color-inverted); text-decoration: none;
   }
   #ca-view {
     display: none;
@@ -994,41 +1001,41 @@ body:not(.skin-contenttranslation) .ve-ui-toolbar-floating > .oo-ui-toolbar-bar 
     margin: 2px;
   }
   #ca-ve-edit > a {
-    -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-editing-core&image=edit&format=original) no-repeat 0 0/15px; mask: url(/w/load.php?modules=oojs-ui.styles.icons-editing-core&image=edit&format=original) no-repeat 0 0/15px; background-color: black; padding: 15px 10px 5px 10px; width: 12px; font-size: 1px; color: white; text-decoration: none;
+    -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-editing-core&image=edit&format=original) no-repeat 0 0/15px; mask: url(/w/load.php?modules=oojs-ui.styles.icons-editing-core&image=edit&format=original) no-repeat 0 0/15px; background-color: var(--color-base); padding: 15px 10px 5px 10px; width: 12px; font-size: 1px; color: var(--color-inverted); text-decoration: none;
   }
   #ca-edit {
     margin: 2px;
   }
   #ca-edit > a {
-    -webkit-mask: url(g/w/load.php?modules=oojs-ui.styles.icons-editing-advanced&image=wikiText&format=original) no-repeat 0 0/15px; mask: url(/w/load.php?modules=oojs-ui.styles.icons-editing-advanced&image=wikiText&format=original) no-repeat 0 0/15px; background-color: black; padding: 15px 10px 5px 10px; font-size: 1px; color: white; text-decoration: none;
+    -webkit-mask: url(g/w/load.php?modules=oojs-ui.styles.icons-editing-advanced&image=wikiText&format=original) no-repeat 0 0/15px; mask: url(/w/load.php?modules=oojs-ui.styles.icons-editing-advanced&image=wikiText&format=original) no-repeat 0 0/15px; background-color: var(--color-base); padding: 15px 10px 5px 10px; font-size: 1px; color: var(--color-inverted); text-decoration: none;
   }
   #ca-viewsource {
     margin: 2px;
   }
   #ca-viewsource > a {
-    -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-editing-core&image=editLock&format=original) no-repeat 0 0/15px; mask: url(/w/load.php?modules=oojs-ui.styles.icons-editing-core&image=editLock&format=original) no-repeat 0 0/15px; background-color: black; padding: 15px 10px 5px 10px; width: 12px; font-size: 1px; color: white; text-decoration: none;
+    -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-editing-core&image=editLock&format=original) no-repeat 0 0/15px; mask: url(/w/load.php?modules=oojs-ui.styles.icons-editing-core&image=editLock&format=original) no-repeat 0 0/15px; background-color: var(--color-base); padding: 15px 10px 5px 10px; width: 12px; font-size: 1px; color: var(--color-inverted); text-decoration: none;
   }
   #ca-history {
     margin: 2px;
   }
   #ca-history > a {
-    -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-content&image=history&format=original) no-repeat 0 0/15px; mask: url(/w/load.php?modules=oojs-ui.styles.icons-content&image=history&format=original) no-repeat 0 0/15px; background-color: black; padding: 15px 1px 5px 10px; width: 12px; font-size: 1px; color: white; text-decoration: none;
+    -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-content&image=history&format=original) no-repeat 0 0/15px; mask: url(/w/load.php?modules=oojs-ui.styles.icons-content&image=history&format=original) no-repeat 0 0/15px; background-color: var(--color-base); padding: 15px 1px 5px 10px; width: 12px; font-size: 1px; color: var(--color-inverted); text-decoration: none;
   }
   #pt-userpage-2 {
     margin: 2px;
   }
   #pt-userpage-2 > a, #pt-createaccount-2 > a {
-    -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-user&image=userAvatarOutline&format=original) no-repeat 0 0/15px; mask: url(/w/load.php?modules=oojs-ui.styles.icons-user&image=userAvatarOutline&format=original) no-repeat 0 0/15px; background-color: black; padding: 10px 10px 10px 10px; width: 12px; font-size: 1px; color: white; text-decoration: none; margin: 0 0 0 15px;
+    -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-user&image=userAvatarOutline&format=original) no-repeat 0 0/15px; mask: url(/w/load.php?modules=oojs-ui.styles.icons-user&image=userAvatarOutline&format=original) no-repeat 0 0/15px; background-color: var(--color-base); padding: 10px 10px 10px 10px; width: 12px; font-size: 1px; color: var(--color-inverted); text-decoration: none; margin: 0 0 0 15px;
   }
   #pt-login-2 {
     margin: 2px;
   }
   #pt-login-2 > a {
-    -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-interactions&image=logIn&format=original) no-repeat 0 0/15px; mask: url(/w/load.php?modules=oojs-ui.styles.icons-interactions&image=logIn&format=original) no-repeat 0 0/15px; background-color: black; padding: 15px 10px 5px 10px; width: 12px; font-size: 1px; color: white; text-decoration: none;
+    -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-interactions&image=logIn&format=original) no-repeat 0 0/15px; mask: url(/w/load.php?modules=oojs-ui.styles.icons-interactions&image=logIn&format=original) no-repeat 0 0/15px; background-color: var(--color-base); padding: 15px 10px 5px 10px; width: 12px; font-size: 1px; color: var(--color-inverted); text-decoration: none;
   }
   /* Search bar fixes for small screens */
   .cdx-search-input > .cdx-button {
-    -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-interactions&image=search&format=original) no-repeat 3px 3px/2px; mask: url(/w/load.php?modules=oojs-ui.styles.icons-interactions&image=search&format=original) no-repeat 3px 3px/25px; background-color: black; width: 12px; font-size: 1px; color: white; text-decoration: none;
+    -webkit-mask: url(/w/load.php?modules=oojs-ui.styles.icons-interactions&image=search&format=original) no-repeat 3px 3px/2px; mask: url(/w/load.php?modules=oojs-ui.styles.icons-interactions&image=search&format=original) no-repeat 3px 3px/25px; background-color: var(--color-base); width: 12px; font-size: 1px; color: var(--color-inverted); text-decoration: none;
   }
   .cdx-text-input__start-icon, .cdx-search-input .cdx-text-input__icon.cdx-text-input__start-icon {
     display:none;
@@ -1141,5 +1148,7 @@ background: unset
     max-width: 100% !important;
   }
 }
+
+
 
 }
