--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim quiddity's tweaks
 @namespace   StylishThemes
-@version     1.1.21
+@version     1.1.22
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -17,6 +17,7 @@ domain("outreach.wikimedia.org"),
 domain("wikimania.wikimedia.org"),
 domain("foundation.wikimedia.org"),
 domain("wikitech.wikimedia.org"),
+domain("incubator.wikimedia.org"),
 domain("wiktionary.org"),
 domain("mediawiki.org"),
 domain("wikisource.org"),
