--- a/dark.user.css
+++ b/dark.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        wiki DARK
 @namespace   StylishThemes
-@version     1.0.12
+@version     1.0.13
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/dark.user.css
 @license     CC-BY-SA-4.0
@@ -17,6 +17,7 @@ domain("outreach.wikimedia.org"),
 domain("wikimania.wikimedia.org"), 
 domain("foundation.wikimedia.org"), 
 domain("wikitech.wikimedia.org"), 
+domain("incubator.wikimedia.org"),
 domain("wiktionary.org"), 
 domain("mediawiki.org"), 
 domain("wikisource.org"), 
