--- a/new-vector-enhanced.user.css
+++ b/new-vector-enhanced.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 Enhanced
 @namespace   StylishThemes
-@version     1.0.24
+@version     1.0.25
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-enhanced.user.css
 @license     CC-BY-SA-4.0
@@ -397,7 +397,7 @@ client-js.vector-sticky-header-enabled .vector-sticky-header-visible .vector-sti
     position: fixed !important;
     top: 54px !important;
     left: 4px !important;
-    border: 1px solid var(--color-base);
+    border: 1px solid var(--border-color-base);
     background: var(--color-inverted);
     z-index: 1;
   }
