--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim quiddity's tweaks
 @namespace   StylishThemes
-@version     1.1.22
+@version     1.1.23
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -31,232 +31,304 @@ domain("beta.wmflabs.org"),
 domain("wikifunctions.org"),
 domain("vrt-wiki.wikimedia.org"),
 domain("patchdemo.wmflabs.org") {
-  /* Stop Menus jumping on page load
-  @import url('https://meta.wikimedia.org/w/index.php?title=MediaWiki:Gadget-MoreMenu-pagestyles.en.css&action=raw&ctype=text/css');  
-  */
-  /* also prevent that from moving the bottom border */
-  .vector-page-toolbar-container {max-height: 27px;}
-  
-  /* hide the Vector-legacy ToC's annoying "[hide]" links */
-  .toctogglespan {
-    display: none;
-  }
-  
-  /* Float the section-header links "[edit] [edit source]" to right, where they're less distracting  */
-  .mw-editsection {
-    float: right;
-    padding-top: 5px;
-  }
-  
-  /* Bigger text in NavPopups gadget */
-  .navpopup {
-    font-size: 0.875em; 
-    line-height: 140%;
-  }
-  .popup_menu {
-    margin-top: 1.1em;
-  }
+/* Stop Menus jumping on page load
+@import url('https://meta.wikimedia.org/w/index.php?title=MediaWiki:Gadget-MoreMenu-pagestyles.en.css&action=raw&ctype=text/css');  
+*/
+/* also prevent that from moving the bottom border */
+.vector-page-toolbar-container {max-height: 27px;}
 
-  /* tweak popups */
-  .popupPreview > table {
-    width:100%;
-  }
-  
-  /* Change the color of the highlightmyname script */
-  span.ais523hmn {
-    background-color: #fbe498 !important;
-  }
-  
-  /* Opacity in RC/Watchlist for users with 500+ edits */
-  .mw-changeslist-user-experienced {
-    opacity: 0.7;
-  }
-  
-  /* Opacity for revert/ed-edits in history pages */
-  .mw-tag-mw-undo,
-  .mw-tag-mw-rollback,
-  .mw-tag-mw-reverted {
-    opacity: 0.2;
-  }
-  
-  /* Test ooui tweaks, smaller menu rows */
-  .oo-ui-menuOptionWidget {
-    padding: 0.3em 1em;
-  }
-  
-  /* Hide the Legend box on RC pages */
-  .mw-changeslist-legend {
-    display: none;
-  }
-  
-  /* Hide the "Mute" links in sidebar */
-  #t-mute {
-    display: none;
-  }
-  
-  /* Make disambig links orange */
-  a.mw-disambig {
-    color: #ff8921;
-  }
-  
-  /* Make redirect links purple */
-  a.mw-redirect {
-    color: #c364ef;
-  }
-  
-  /* Bold the sidebar's interwiki links to Enwiki/Simple, and interproject links to Commons/WikiVoyage/Wikisource */
-  .interwiki-en,
-  .interwiki-simple,
-  .wb-otherproject-commons,
-  .wb-otherproject-wikivoyage,
-  .wb-otherproject-wikisource,
-  .wikibase-sitelinkview-enwiki {
-    font-weight: bold;
-  }
-  
-  /* Force reduced # of rows in editing window */
-  #wpTextbox1 {
-    height: 25em;
-  }
-  
-  /* Global Font tweaks, better typography */
-  h4 {
-    font-size: 100% !important;
-  }
-  h5 {
-    font-size: 90% !important;
-  }
-  h6 {
-    font-size: 80% !important;
-  }
-  
-  /* Hide "Retrieved [date]" in references */
-  .reference-accessdate {
-    display: none;
-  }
-  
-  /* Vertical-align content in Tables */
-  table.wikitable > tr > th,
-  table.wikitable > tr > td,
-  table.wikitable > * > tr > th,
-  table.wikitable > * > tr > td {
-    vertical-align: top;
-  }
-  
-  /* Hide the "print/export" sidebar navbox */
-  #p-coll-print_export {
-    display: none;
-  }
-  
-  /* Tweak background color of "New Translations" in Special:PageTranslation */
-  .mw-tpt-sp-section-type-new {
-    background-color: #defdde;
-  }
-  .diff-contentalign-left {
-    border: 2px solid green !important;
-  }
+/* hide the Vector-legacy ToC's annoying "[hide]" links */
+.toctogglespan {
+  display: none;
+}
 
-  /* Highlight RC in sidebar cos wikis keep moving it */
-  #n-recentchanges > a {
-    background-color: #d3f2d3;
-  }
-  
-  /* Bump Proveit above max-wdth toggle *? */
-  #proveit {
-    bottom: 50px;
-  }
-  
-  /* Hide "View" link in page-toolbar */
-  #ca-view {
-    display: none;
-  }
-  
-  /* Hover to Auto-open all UI dropdown menus */
-  /*
-  .vector-menu-dropdown:hover > .vector-menu-content {
-	  opacity: 1;
-	  visibility: visible;
-	  height: auto;
-    transition-delay: 100ms;
-  }
-  */
-  
-  /* Distinct End-matter sections */
-  #toc-See_also, 
-  #toc-References, 
-  #toc-Notes, 
-  #toc-Citations, 
-  #toc-Bibliography, 
-  #toc-Sources, 
-  #toc-Further_reading, 
-  #toc-External_links {
-    font-size: 0.9em;
-/*    margin-left: 15px;
-    padding-left: 15px;
-    border-left: 1px solid #a2a9b1 */
-  }
-  
+/* Float the section-header links "[edit] [edit source]" to right, where they're less distracting  */
+.mw-editsection {
+  float: right;
+  padding-top: 5px;
+}
+
+/* NAVPOP FIXES */
+/* ------------ */
+/* Bigger text in NavPopups gadget */
+.navpopup {
+  font-size: 0.875em; 
+  line-height: 140%;
+}
+.popup_menu {
+  margin-top: 1.1em;
+}
+/* tweak popups */
+.popupPreview > table {
+   width:100%;
+}
+/* disable interwiki styling */
+.popupPreview a.extiw,
+.popupPreview a.extiw:active {
+  color: #36b;
+  background: none;
+  padding: 0;
+}
+.popupPreview .external {
+  color: #36b;
+}
+/* Configure Drag bar color */
+.popupDrag {
+  background-color: #ffbe20;
+  height: 5px;
+  margin-top: -5px;
+  margin-bottom: 5px;
+}
+/* Dark mode in navpopups - TESTING */
+ins.popupDiff {
+  background: #8fa6f9;
+  color: var(--color-base);
+}
+del.popupDiff {
+  background: #e0b96c;
+  color: var(--color-base);
+}
+.navpopup {
+  background-color: var(--color-inverted);
+}
+.popup_mainlink a {
+  color: var(--color-base);
+}
+.navpopup hr {
+  color: #aaa !important;
+  background-color: #aaa !important;
+}
+.popup_menu {
+  background: var(--color-inverted);
+}
+.popup_menu a {
+  color: #555;
+}
+.popup_menu_row {
+  color: #aaa;
+}
+.popup_drop a,
+.popup_drop a:visited {
+  color: #0645ad;
+}
+.popup_drop:hover .popup_menu,
+.popup_drop .popup_menu:hover {
+  background: var(--color-inverted);
+  color: #555;
+}
+.popup_drop:hover {
+  background: #ccf;
+  color: #44f;
+}
+/* other colours, styles and so on */
+.popup_menu a:hover {
+  background: grey;
+  color: var(--color-inverted);
+}
+a.popup_change_title_link {
+  color: #152;
+}
+.popup_history_row_even {
+  background: var(--color-inverted);
+}
+
+/* Change the color of the highlightmyname script */
+span.ais523hmn {
+  background-color: #fbe498 !important;
+}
+
+/* Opacity in RC/Watchlist for users with 500+ edits */
+.mw-changeslist-user-experienced {
+  opacity: 0.7;
+}
+
+/* Opacity for revert/ed-edits in history pages */
+.mw-tag-mw-undo,
+.mw-tag-mw-rollback,
+.mw-tag-mw-reverted {
+  opacity: 0.2;
+}
+
+/* Test ooui tweaks, smaller menu rows */
+.oo-ui-menuOptionWidget {
+  padding: 0.3em 1em;
+}
+
+/* Hide the Legend box on RC pages */
+.mw-changeslist-legend {
+  display: none;
+}
+
+/* Hide the "Mute" links in sidebar */
+#t-mute {
+  display: none;
+}
+
+/* Make disambig links orange */
+a.mw-disambig {
+  color: #ff8921;
+}
+
+/* Make redirect links purple */
+a.mw-redirect {
+  color: #c364ef;
+}
+
+/* Bold the sidebar's interwiki links to Enwiki/Simple, and interproject links to Commons/WikiVoyage/Wikisource */
+.interwiki-en,
+.interwiki-simple,
+.wb-otherproject-commons,
+.wb-otherproject-wikivoyage,
+.wb-otherproject-wikisource,
+.wikibase-sitelinkview-enwiki {
+  font-weight: bold;
+}
+
+/* Force reduced # of rows in editing window */
+#wpTextbox1 {
+  height: 25em;
+}
+
+/* Global Font tweaks, better typography */
+h4 {
+  font-size: 100% !important;
+}
+h5 {
+  font-size: 90% !important;
+}
+h6 {
+  font-size: 80% !important;
+}
+
+/* Hide "Retrieved [date]" in references */
+.reference-accessdate {
+  display: none;
+}
+
+/* Vertical-align content in Tables */
+table.wikitable > tr > th,
+table.wikitable > tr > td,
+table.wikitable > * > tr > th,
+table.wikitable > * > tr > td {
+  vertical-align: top;
+}
+
+/* Hide the "print/export" sidebar navbox */
+#p-coll-print_export {
+  display: none;
+}
+
+/* Tweak background color of "New Translations" in Special:PageTranslation */
+.mw-tpt-sp-section-type-new {
+  background-color: #defdde;
+}
+.diff-contentalign-left {
+  border: 2px solid green !important;
+ }
+ /* Highlight RC in sidebar cos wikis keep moving it */
+#n-recentchanges > a {
+  background-color: #d3f2d3;
+}
+
+/* Bump Proveit above max-wdth toggle *? */
+#proveit {
+  bottom: 50px;
+}
+
+/* Hide "View" link in page-toolbar */
+#ca-view {
+  display: none;
+}
+
+/* Hover to Auto-open all UI dropdown menus */
+/*
+.vector-menu-dropdown:hover > .vector-menu-content {
+  opacity: 1;
+  visibility: visible;
+  height: auto;
+  transition-delay: 100ms;
+}
+*/
+
+/* Distinct End-matter sections */
+#toc-See_also, 
+#toc-References, 
+#toc-Notes, 
+#toc-Citations, 
+#toc-Bibliography, 
+#toc-Sources, 
+#toc-Further_reading, 
+#toc-External_links {
+  font-size: 0.9em;
+/*  margin-left: 15px;
+  padding-left: 15px;
+  border-left: 1px solid #a2a9b1 */
+}
+
 /* TESTS
-  .timeline-wrapper, .wikitable {width: calc(100vw - 350px) !important;}
-  .timeline-wrapper {max-width: none;} */
-  .vector-feature-zebra-design-disabled .mw-page-container {margin: 0;}
-  
+.timeline-wrapper, 
+.wikitable {width: calc(100vw - 350px) !important;}
+.timeline-wrapper {max-width: none;} */
+.vector-feature-zebra-design-disabled .mw-page-container {
+  margin: 0;
+}
+
 /* Semi-hide the empty summary for Category Trees */
- .CategoryTreeItem:has(span[title="Contains 0 subcategories, 0 pages, and 0 files"]) {
-   opacity: 0.4;
-  }
+.CategoryTreeItem:has(span[title="Contains 0 subcategories, 0 pages, and 0 files"]) {
+  opacity: 0.4;
+}
 
 /* More obvious multi-change indicators in Enhanced RC (grouped changes) */
-  .mw-enhancedchanges-arrow, .mw-changeslist-groupdiff {
-    background: #b0f2e8;
-  }
+.mw-enhancedchanges-arrow, .mw-changeslist-groupdiff {
+  background: #b0f2e8;
+}
 
 /* Smol the sub-text in Enchanced RC */
-  .mw-rcfilters-ui-highlights-enhanced-nested {
-    font-size: 0.9em;
-  }
+.mw-rcfilters-ui-highlights-enhanced-nested {
+  font-size: 0.9em;
+}
 
 /* Bigger banner-close icons */
-  #cnotice-toggle-box > a > img {
-    display: none;
-  }
- #cnotice-toggle-box > a { 
-   background: url('https://upload.wikimedia.org/wikipedia/commons/3/36/CloseWindow.svg');
-   background-size:cover; 
-   width:40px; 
-   height: 40px;
-   display: block
-  }
-  #cnotice-toggle-icon > a > img {
-    width: 40px;
-    height: 40px;
-  } 
-  #cnotice-toggle-icon, #cnotice-toggle-icon > a {
-   background: url('https://upload.wikimedia.org/wikipedia/commons/3/36/CloseWindow.svg');
-   background-size:cover; 
-   width:40px; 
-   height: 40px;
-   display: block
-  }
-  #cn-toggle-box > a > img {
-    width: 40px;
-    height: 40px;
-  } 
-  #cn-toggle-box > a {
-   background: url('https://upload.wikimedia.org/wikipedia/commons/3/36/CloseWindow.svg');
-   background-size:cover; 
-   width: 40px; 
-   height: 40px;
-   display: block
-  }
-  .frb-icon-btn.frb-close {
-   background: url('https://upload.wikimedia.org/wikipedia/commons/3/36/CloseWindow.svg');
-   background-size:cover; 
-   width: 40px; 
-   height: 40px;
-   display: block
-  }
-  
+#cnotice-toggle-box > a > img {
+  display: none;
+}
+#cnotice-toggle-box > a { 
+  background: url('https://upload.wikimedia.org/wikipedia/commons/3/36/CloseWindow.svg');
+  background-size:cover; 
+  width:40px; 
+  height: 40px;
+  display: block
+}
+#cnotice-toggle-icon > a > img {
+  width: 40px;
+  height: 40px;
+} 
+#cnotice-toggle-icon, #cnotice-toggle-icon > a {
+  background: url('https://upload.wikimedia.org/wikipedia/commons/3/36/CloseWindow.svg');
+  background-size:cover; 
+  width:40px; 
+  height: 40px;
+  display: block
+}
+#cn-toggle-box > a > img {
+  width: 40px;
+  height: 40px;
+} 
+#cn-toggle-box > a {
+  background: url('https://upload.wikimedia.org/wikipedia/commons/3/36/CloseWindow.svg');
+  background-size:cover; 
+  width: 40px; 
+  height: 40px;
+  display: block
+}
+.frb-icon-btn.frb-close {
+  background: url('https://upload.wikimedia.org/wikipedia/commons/3/36/CloseWindow.svg');
+  background-size:cover; 
+  width: 40px; 
+  height: 40px;
+  display: block
+}
+
 /* troubleshoot interrupted lists -- 
 https://en.wikipedia.org/wiki/Wikipedia_talk:Manual_of_Style/Accessibility#Another_LISTGAP_solution? 
 */
@@ -332,4 +404,12 @@ font-size: 90% !important;
 .tocnumber {
 color: grey;
 }
+
+/* Anon preview warning */
+.mw-anon-edit-warning, 
+.mw-anon-preview-warning {
+background: #f47087;
+border: green 10px solid;
+}
+
 }
