Fix for default sticky table-header gadgets

--- a/new-vector-enhanced.user.css
+++ b/new-vector-enhanced.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 Enhanced
 @namespace   StylishThemes
-@version     1.0.31
+@version     1.0.32
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-enhanced.user.css
 @license     CC-BY-SA-4.0
@@ -898,8 +898,8 @@ body:not(.skin-contenttranslation) .ve-ui-toolbar-floating > .oo-ui-toolbar-bar 
 }
 
 /* Fix for sticky table-header gadgets */
-.jquery-tablesorter > thead,
-.mw-sticky-header > thead {
+.skin-vector-2022.vector-sticky-header-visible .jquery-tablesorter > thead,
+	.skin-vector-2022.vector-sticky-header-visible .mw-sticky-header > thead {
     position: -webkit-sticky;
     position: sticky;
     top: 78px !important;
