--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim quiddity's tweaks
 @namespace   StylishThemes
-@version     1.1.27
+@version     1.1.28
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -207,7 +207,7 @@ table.wikitable > * > tr > td {
 #toc-Sources, 
 #toc-Further_reading, 
 #toc-External_links {
-  font-size: 0.9em;
+  font-size: 0.85em;
 /*  margin-left: 15px;
   padding-left: 15px;
   border-left: 1px solid #a2a9b1 */
@@ -338,10 +338,10 @@ a[href="/wiki/User:FuzzyBot"] {
   background: #d8d7d7 !important;
 } */
 
-/* test smaller ToC text */
+/* test smaller ToC text 
 .vector-toc-text {
 font-size: 90% !important;
-}
+} */
 
 /* lighter numbers for Vector-classic text */
 .tocnumber {
