--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim quiddity's tweaks
 @namespace   StylishThemes
-@version     1.1.28
+@version     1.1.29
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -359,6 +359,14 @@ border: green 10px solid;
 .vector-body-before-content,
 #siteSub {
 opacity: 0.65;
+}
+
+/* Smaller parsoid tag */
+#mw-indicator-parsoid .cdx-info-chip--text {
+font-size: 8px !important;
+}
+#mw-indicator-parsoid {
+margin-top: -15px
 }
 
 }
