move "source" override to personal css, fix tools edge

--- a/new-vector-enhanced.user.css
+++ b/new-vector-enhanced.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 Enhanced
 @namespace   StylishThemes
-@version     1.0.38
+@version     1.0.39
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-enhanced.user.css
 @license     CC-BY-SA-4.0
@@ -48,18 +48,6 @@ domain("patchdemo.wmflabs.org") {
   body {
     background-color: var(--background-color-base,#f8f9fa) !important;
   }
-}
-
-/* Shorten the inline links for "edit source" to just "source" */
-.mw-editsection > a:not(.mw-editsection-visualeditor)  {
-  font-size: 0px;
-}
-.mw-editsection > a:not(.mw-editsection-visualeditor)::after  {
-  content: 'source';
-  font-size: 0.8rem;
-  visibility: visible;
-  color: #3366cc;
-  width: 10px !important;
 }
 
 /* Smaller margin for RecentChanges pages */
@@ -460,7 +448,7 @@ client-js.vector-sticky-header-enabled .vector-sticky-header-visible .vector-sti
   }
 }
 #firstHeading {
-padding-top: 10px;
+padding-top: 15px;
 }
 
 
@@ -893,6 +881,16 @@ html {
     padding-top: 5px;
   }
   */
+}
+/* nudge Tools right */
+#right-navigation {
+    right: 1px !important;
+    position: fixed;
+    background: var(--background-color-base);
+    border-bottom: 1px solid var(--border-color-subtle);
+}
+.vector-dropdown .vector-dropdown-label:not(.cdx-button--icon-only)::after {
+  margin-left: 1px;
 }
 
 /* Fix for VE toolbar */
