--- a/new-vector-enhanced.user.css
+++ b/new-vector-enhanced.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 Enhanced
 @namespace   StylishThemes
-@version     1.0.39
+@version     1.0.40
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-enhanced.user.css
 @license     CC-BY-SA-4.0
@@ -882,15 +882,18 @@ html {
   }
   */
 }
-/* nudge Tools right */
-#right-navigation {
+/* nudge Tools right if expanded */
+@media screen and (max-width: 999px) {
+  #right-navigation:has(.vector-page-tools-landmark) {
     right: 1px !important;
     position: fixed;
     background: var(--background-color-base);
     border-bottom: 1px solid var(--border-color-subtle);
-}
-.vector-dropdown .vector-dropdown-label:not(.cdx-button--icon-only)::after {
+    padding-bottom: 0 !important;
+  }
+  .vector-dropdown .vector-dropdown-label:not(.cdx-button--icon-only)::after {
   margin-left: 1px;
+  }
 }
 
 /* Fix for VE toolbar */
