--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim quiddity's tweaks
 @namespace   StylishThemes
-@version     1.1.32
+@version     1.1.33
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -31,6 +31,7 @@ domain("beta.wmflabs.org"),
 domain("wikifunctions.org"),
 domain("vrt-wiki.wikimedia.org"),
 domain("patchdemo.wmflabs.org") {
+
 /* Stop Menus jumping on page load
 @import url('https://meta.wikimedia.org/w/index.php?title=MediaWiki:Gadget-MoreMenu-pagestyles.en.css&action=raw&ctype=text/css');  
 */
@@ -218,9 +219,8 @@ body.mw-special-PageTranslation #mw-content-text li > div::after {
   display: none;
 }
 /* prematter less prominent */
-.vector-body-before-content,
 #siteSub {
-opacity: 0.65;
+opacity: 0.5;
 }
 /* Hide the "print/export" sidebar navbox */
 #p-coll-print_export {
@@ -402,6 +402,16 @@ font-size: 90% !important;
   font-size: 0.9rem;
   visibility: visible;
   color: var(--color-progressive,#36c);
+}
+
+/* tweak logo+wordmark edge */
+.vector-header-start {
+padding-right: 10px;
+}
+
+/* Reduce xtools visibility */
+#xtools {
+opacity: 0.5;
 }
 
 }
