--- a/new-vector-enhanced.user.css
+++ b/new-vector-enhanced.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 Enhanced
 @namespace   StylishThemes
-@version     1.0.40
+@version     1.0.41
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-enhanced.user.css
 @license     CC-BY-SA-4.0
@@ -42,6 +42,10 @@ domain("patchdemo.wmflabs.org") {
 5. main menu 
 6. custom additions - top icons and similar. 
 */
+
+/* 0. Just 2022 */
+body.skin-vector-2022 {
+
 /* 1. Misc Tweaks */
 /* background color override */
 @media screen {
@@ -1158,5 +1162,5 @@ background: unset
     flex-flow: unset;
   }
 }
-
+}
 }
