--- a/quiddity.user.css
+++ b/quiddity.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim quiddity's tweaks
 @namespace   StylishThemes
-@version     1.1.36
+@version     1.1.37
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/quiddity.user.css
 @license     CC-BY-SA-4.0
@@ -222,8 +222,9 @@ body.mw-special-PageTranslation #mw-content-text li > div::after {
 #siteSub {
 opacity: 0.5;
 }
-/* Hide the "print/export" sidebar navbox */
-#p-coll-print_export {
+/* Hide the "print/export" sidebar navbox + wikitech */
+#p-coll-print_export,
+#p-electronpdfservice-sidebar-portlet-heading {
   display: none;
 }
 
